--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
