--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
