--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
